Use UseZGC on Java 17 or greater